Backward diff promotions

--- a/BackwardDiff.ipynb
+++ b/BackwardDiff.ipynb
@@ -7,15 +7,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Base: exp, log, sin, cos, tan, +, -, *, /, sqrt, convert, promote_rule, zero\n"
+    "import Base: exp, log, sin, cos, tan, +, ^, -, *, /, sqrt, convert, promote_rule, zero\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "found-offer",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dual"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is the structure that stores the autodiff information.  The name is\n",
     "# `Infinitesimal` spelled backward.  The elements are `x`, the result of a\n",
@@ -31,22 +42,48 @@
     "    dfdy::T\n",
     "    parent::Union{Dual{T}, Array{Dual{T},1}, Int, Nothing}\n",
     "    bp!\n",
-    "end"
+    "end\n",
+    "Dual(n::Integer, d::Float64, parent::Union{Dual{T}, Array{Dual{T},1}, Int, Nothing}, bp!::Any)  where {T <: Number} = Dual(promote(n, d)..., parent, bp!)\n",
+    "Dual(n::Float64, d::Integer, parent::Union{Dual{T}, Array{Dual{T},1}, Int, Nothing}, bp!::Any)  where {T <: Number} = Dual(promote(n, d)..., parent, bp!)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "id": "overall-drain",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dual"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# x = Dual(2.0, 2, 1, (dfdy, parents) -> nothing)*  Dual(2, 2, 1, (dfdy, parents) -> nothing)\n",
+    "promote_type(Dual{Real}, Dual{Number})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "documentary-nickel",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "convert (generic function with 186 methods)"
+       "convert (generic function with 187 methods)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +93,13 @@
     "    Dual(x, zero(T), nothing, (dfdy, parents) -> nothing)\n",
     "end\n",
     "\n",
+    "function convert(::Type{Dual{T}}, x::Dual{S}) where {T, S <: Number}\n",
+    "    Dual(T(x.x), T(x.dfdy), x.parent, x.bp!)\n",
+    "end\n",
+    "\n",
+    "\n",
     "function convert(::Type{Dual{T}}, x::S) where {T, S <: Number}\n",
+    "    print(\"2asdsadsda\", typeof(x))\n",
     "    Dual(T(x), zero(T), nothing, (dfdy, parents) -> nothing)\n",
     "end\n",
     "\n",
@@ -67,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "distinct-reconstruction",
    "metadata": {},
    "outputs": [
@@ -77,7 +120,7 @@
        "zero (generic function with 23 methods)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,22 +133,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "entitled-proportion",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "promote_rule (generic function with 125 methods)"
+       "promote_rule (generic function with 126 methods)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "function promote_rule(::Type{Dual{T}}, ::Type{Dual{S}}) where {T,S}\n",
+    "    Dual{promote_type(T,S)}\n",
+    "end\n",
     "function promote_rule(::Type{Dual{T}}, ::Type{S}) where {T, S <: Number}\n",
     "    Dual{promote_type(T,S)}\n",
     "end\n",
@@ -121,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "acceptable-aquatic",
    "metadata": {},
    "outputs": [
@@ -131,7 +177,7 @@
        "push_parents! (generic function with 4 methods)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "approved-diagram",
    "metadata": {},
    "outputs": [
@@ -163,7 +209,7 @@
        "backprop! (generic function with 2 methods)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "tropical-dietary",
    "metadata": {},
    "outputs": [
@@ -196,7 +242,7 @@
        "collect_outputs (generic function with 1 method)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "boolean-rocket",
    "metadata": {},
    "outputs": [
@@ -236,7 +282,7 @@
        "D"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "boring-reconstruction",
    "metadata": {},
    "outputs": [
@@ -322,7 +368,7 @@
        "D (generic function with 2 methods)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "religious-velvet",
    "metadata": {},
    "outputs": [
@@ -350,7 +396,7 @@
        "log (generic function with 21 methods)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,6 +497,18 @@
     "    Dual(sqrtx, zero(sqrtx), x, bp!)\n",
     "end\n",
     "\n",
+    "function ^(a::Dual{T}, x::Dual{T}) where T\n",
+    "    value = a.x^x.x\n",
+    "    function bp!(dfdy, xy)\n",
+    "        a,x = xy\n",
+    "         print(typeof(dfdy * (x.x) * (a.x)^(x.x - 1)), \" nic  \", typeof(dfdy * a.x^x.x*log(a.x)))\n",
+    "        a.dfdy += dfdy * (x.x) * (a.x)^(x.x - 1)\n",
+    "        x.dfdy += dfdy * a.x^x.x*log(a.x)\n",
+    "    end\n",
+    "\n",
+    "    Dual(value, zero(value), [a, x], bp!)\n",
+    "end\n",
+    "\n",
     "function log(x::Dual{T}) where T\n",
     "    function bp!(dfdy, p)\n",
     "        p.dfdy += dfdy/x.x\n",
@@ -462,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "fitting-drawing",
    "metadata": {},
    "outputs": [
@@ -472,30 +530,30 @@
        "test (generic function with 1 method)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function test(x, y)\n",
-    "    return x^2 + y^3\n",
+    "function test(a, x)\n",
+    "    return a^x\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "encouraging-termination",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(::var\"#dfdx#18\"{typeof(test)}) (generic function with 3 methods)"
+       "(::var\"#dfdx#12\"{typeof(test)}) (generic function with 3 methods)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "available-willow",
    "metadata": {},
    "outputs": [
@@ -514,46 +572,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dual{Float64}[Dual{Float64}(479.68499999999995, 1.0, Dual{Float64}[Dual{Float64}(436.80999999999995, 0.0, Dual{Float64}[Dual{Float64}(20.9, 0.0, 1, var\"#17#23\"()), Dual{Float64}(20.9, 0.0, 1, var\"#17#23\"())], bpt!), Dual{Float64}(42.875, 0.0, Dual{Float64}[Dual{Float64}(3.5, 0.0, 2, var\"#17#23\"()), Dual{Float64}(12.25, 0.0, Dual{Float64}[Dual{Float64}(3.5, 0.0, 2, var\"#17#23\"()), Dual{Float64}(3.5, 0.0, 2, var\"#17#23\"())], bpt!)], bpt!)], bpp!)]"
+      "Dual{Int64}[Dual{Int64}(4, 1, Dual{Int64}[Dual{Int64}(2, 0, 1, var\"#11#17\"()), Dual{Int64}(2, 0, 2, var\"#11#17\"())], var\"#bp!#37\"(Core.Box(Dual{Int64}(2, 0, 1, var\"#11#17\"())), Core.Box(Dual{Int64}(2, 0, 2, var\"#11#17\"()))))]Int64 nic  Float64"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "2-element Array{Float64,1}:\n",
-       " 41.8\n",
-       " 36.75"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mInexactError: Int64(2.772588722239781)\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mInexactError: Int64(2.772588722239781)\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] Int64 at ./float.jl:710 [inlined]",
+      " [2] convert(::Type{Int64}, ::Float64) at ./number.jl:7",
+      " [3] setproperty!(::Dual{Int64}, ::Symbol, ::Float64) at ./Base.jl:34",
+      " [4] (::var\"#bp!#37\")(::Int64, ::Array{Dual{Int64},1}) at ./In[20]:102",
+      " [5] backprop!(::Array{Dual{Int64},1}) at ./In[8]:10",
+      " [6] backprop!(::Dual{Int64}) at ./In[8]:4",
+      " [7] (::var\"#dfdx#12\"{typeof(test)})(::Int64, ::Int64) at ./In[10]:54",
+      " [8] top-level scope at In[24]:1",
+      " [9] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
     }
    ],
    "source": [
-    "d(20.9,3.5)"
+    "d(2, 2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "narrative-neighborhood",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cubic-percentage",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "framed-controversy",
+   "id": "republican-boxing",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -561,7 +610,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.5.4",
    "language": "julia",
    "name": "julia-1.5"
   },
@@ -569,7 +618,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.5.4"
   }
  },
  "nbformat": 4,
