--- a/BackwardDiff.ipynb
+++ b/BackwardDiff.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "documentary-nickel",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "convert (generic function with 187 methods)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "religious-velvet",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "log (generic function with 21 methods)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "fitting-drawing",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "test (generic function with 1 method)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "encouraging-termination",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
        "(::var\"#dfdx#12\"{typeof(test)}) (generic function with 3 methods)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "available-willow",
    "metadata": {},
    "outputs": [
@@ -572,31 +572,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dual{Int64}[Dual{Int64}(4, 1, Dual{Int64}[Dual{Int64}(2, 0, 1, var\"#11#17\"()), Dual{Int64}(2, 0, 2, var\"#11#17\"())], var\"#bp!#37\"(Core.Box(Dual{Int64}(2, 0, 1, var\"#11#17\"())), Core.Box(Dual{Int64}(2, 0, 2, var\"#11#17\"()))))]Int64 nic  Float64"
+      "Dual{Float64}[Dual{Float64}(4.0, 1.0, Dual{Float64}[Dual{Float64}(2.0, 0.0, 1, var\"#11#17\"()), Dual{Float64}(2.0, 0.0, 2, var\"#11#17\"())], var\"#bp!#25\"(Core.Box(Dual{Float64}(2.0, 0.0, 1, var\"#11#17\"())), Core.Box(Dual{Float64}(2.0, 0.0, 2, var\"#11#17\"()))))]Float64 nic  Float64"
      ]
     },
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mInexactError: Int64(2.772588722239781)\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mInexactError: Int64(2.772588722239781)\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] Int64 at ./float.jl:710 [inlined]",
-      " [2] convert(::Type{Int64}, ::Float64) at ./number.jl:7",
-      " [3] setproperty!(::Dual{Int64}, ::Symbol, ::Float64) at ./Base.jl:34",
-      " [4] (::var\"#bp!#37\")(::Int64, ::Array{Dual{Int64},1}) at ./In[20]:102",
-      " [5] backprop!(::Array{Dual{Int64},1}) at ./In[8]:10",
-      " [6] backprop!(::Dual{Int64}) at ./In[8]:4",
-      " [7] (::var\"#dfdx#12\"{typeof(test)})(::Int64, ::Int64) at ./In[10]:54",
-      " [8] top-level scope at In[24]:1",
-      " [9] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
+     "data": {
+      "text/plain": [
+       "2-element Array{Float64,1}:\n",
+       " 4.0\n",
+       " 2.772588722239781"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "d(2, 2)"
+    "d(2.0, 2)"
    ]
   },
   {
