--- a/ADForward.ipynb
+++ b/ADForward.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "elegant-death",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "median-welding",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "limited-calculator",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "Dual"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "level-attachment",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "convert (generic function with 187 methods)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "dying-december",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "zero (generic function with 23 methods)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "wired-efficiency",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "promote_rule (generic function with 126 methods)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "focused-portable",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "extract_derivative (generic function with 3 methods)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,32 +202,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "military-ecology",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "D (generic function with 2 methods)"
+       "derivativeСalculation (generic function with 3 methods)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function D(f)\n",
+    "function derivativeСalculation(f, value)\n",
     "    function df(x)\n",
     "        xdx = Dual(x, one(x))\n",
-    "        print(xdx)\n",
     "        result = f(xdx)\n",
     "        return extract_derivative(result)\n",
     "    end\n",
-    "    df\n",
+    "    df(value)\n",
     "end\n",
-    "function D(i::Integer, f)\n",
+    "function derivativeСalculation(f,i::Integer,values...)\n",
+    "    print(\"DUPA\")\n",
+    "    function df(valuesS)\n",
+    "        xarr = [(j != i ? x : Dual(x, one(x))) for (j,x) in enumerate(valuesS)]\n",
+    "        result = f(xarr...)\n",
+    "        return extract_derivative(result)\n",
+    "    end\n",
+    "    df(values)\n",
+    "end\n",
+    "function derivativeСalculation(f,i::Integer)\n",
     "    function df(xs...)\n",
     "        xarr = [(j != i ? x : Dual(x, one(x))) for (j,x) in enumerate(xs)]\n",
     "        result = f(xarr...)\n",
@@ -239,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "emerging-motorcycle",
    "metadata": {},
    "outputs": [
@@ -249,7 +257,7 @@
        "^ (generic function with 67 methods)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "progressive-comment",
    "metadata": {},
    "outputs": [
@@ -290,7 +298,7 @@
        "sqrt (generic function with 21 methods)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "drawn-monte",
    "metadata": {},
    "outputs": [
@@ -313,7 +321,7 @@
        "tan (generic function with 13 methods)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "eight-lounge",
    "metadata": {},
    "outputs": [
@@ -349,7 +357,7 @@
        "max (generic function with 13 methods)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "digital-thinking",
    "metadata": {},
    "outputs": [
@@ -372,7 +380,7 @@
        "iterate (generic function with 212 methods)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "comparable-judge",
    "metadata": {},
    "outputs": [
@@ -396,18 +404,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dual{Float64}(0.18338781372449925, 1.0)"
+      "\u001b[91m\u001b[1mError During Test\u001b[22m\u001b[39m at \u001b[39m\u001b[1mIn[14]:1\u001b[22m\n",
+      "  Test threw exception\n",
+      "  Expression: begin\n",
+      "    x = randn()\n",
+      "    isapprox((D(exp))(x), exp(x))\n",
+      "end\n",
+      "  UndefVarError: D not defined\n",
+      "  Stacktrace:\n",
+      "   [1] top-level scope at In[14]:1\n",
+      "   [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091\n",
+      "   [3] softscope_include_string(::Module, ::String, ::String) at /home/ligerd/.julia/packages/SoftGlobalScope/u4UzH/src/SoftGlobalScope.jl:65\n",
+      "   [4] execute_request(::ZMQ.Socket, ::IJulia.Msg) at /home/ligerd/.julia/packages/IJulia/e8kqU/src/execute_request.jl:67\n",
+      "   [5] #invokelatest#1 at ./essentials.jl:710 [inlined]\n",
+      "   [6] invokelatest at ./essentials.jl:709 [inlined]\n",
+      "   [7] eventloop(::ZMQ.Socket) at /home/ligerd/.julia/packages/IJulia/e8kqU/src/eventloop.jl:8\n",
+      "   [8] (::IJulia.var\"#15#18\")() at ./task.jl:356\n",
+      "  \n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "\u001b[32m\u001b[1mTest Passed\u001b[22m\u001b[39m"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mThere was an error during testing\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mThere was an error during testing\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] record(::Test.FallbackTestSet, ::Union{Test.Error, Test.Fail}) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Test/src/Test.jl:737",
+      " [2] do_test(::Test.ExecutionResult, ::Any) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.5/Test/src/Test.jl:520",
+      " [3] top-level scope at In[14]:1",
+      " [4] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
     }
    ],
    "source": [
@@ -419,50 +447,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "spoken-daily",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(::var\"#df#1\"{typeof(f)}) (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: D not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: D not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[15]:4",
+      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
     }
    ],
    "source": [
     "function f(x)\n",
     "    return exp(-x/pi)*sin(2.0*pi*sqrt(2)*x)\n",
     "end\n",
-    "fprime = D(f)"
+    "fprime = D(f,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "incident-manchester",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dual{Int64}(3, 1)"
+     "ename": "LoadError",
+     "evalue": "\u001b[91mUndefVarError: fprime not defined\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mUndefVarError: fprime not defined\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[16]:1",
+      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.03569811122195761"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -471,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "british-packing",
    "metadata": {},
    "outputs": [
@@ -481,7 +506,7 @@
        "(::var\"#df#1\"{typeof(f)}) (generic function with 1 method)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "reported-communist",
    "metadata": {},
    "outputs": [
@@ -506,7 +531,7 @@
        "(::var\"#df#1\"{Int64}) (generic function with 1 method)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "careful-modification",
    "metadata": {},
    "outputs": [
@@ -535,7 +560,7 @@
        "linear (generic function with 1 method)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,23 +573,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "every-verification",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DUPA"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(::var\"#df#9\"{Int64,typeof(linear)}) (generic function with 1 method)"
+       "2.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dldx = D(1, linear)"
+    "derivativeСalculation(linear,1,1.2,2,3)"
    ]
   },
   {
@@ -576,7 +608,7 @@
     {
      "data": {
       "text/plain": [
-       "2.0"
+       "1.0"
       ]
      },
      "execution_count": 33,
@@ -845,6 +877,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "removed-consumption",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "id": "false-motivation",
    "metadata": {},
@@ -989,7 +1029,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.4",
+   "display_name": "Julia 1.5.3",
    "language": "julia",
    "name": "julia-1.5"
   },
@@ -997,7 +1037,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.4"
+   "version": "1.5.3"
   }
  },
  "nbformat": 4,
