--- a/ADForward.ipynb
+++ b/ADForward.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "emerging-motorcycle",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
        "^ (generic function with 67 methods)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,17 +359,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "wound-intent",
+   "execution_count": 13,
+   "id": "valued-problem",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "softmax (generic function with 2 methods)"
+       "softmax (generic function with 1 method)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "golden-hamilton",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
        "jacobian (generic function with 1 method)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "accessory-sperm",
    "metadata": {
     "scrolled": true
@@ -468,7 +468,7 @@
        " -0.196612   0.196612"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "sunset-attendance",
+   "id": "governmental-safety",
    "metadata": {},
    "outputs": [
     {
@@ -511,59 +511,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "careful-modification",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "linear (generic function with 1 method)"
+       "linear (generic function with 2 methods)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function linear(m, x, b)\n",
-    "    return m*x+b\n",
+    "function linear(x)\n",
+    "    return x^2\n",
     "end\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "id": "every-verification",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DUPA"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "21.0"
+       "24"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "derivativeСalculation(linear,1,[1.2,21,3])"
+    "derivativeСalculation(linear,1,[12])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "accomplished-farmer",
+   "id": "catholic-judges",
    "metadata": {},
    "outputs": [
     {
