--- a/BackwardDiff.ipynb
+++ b/BackwardDiff.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Base: exp, log, sin, cos, tan, +, ^, -, *, /, sqrt, convert, promote_rule, zero\n"
+    "import Base: exp, log, sin, cos, tan, +, ^, -, *, /, sqrt, convert, promote_rule, zero,max\n"
    ]
   },
   {
@@ -15,18 +15,7 @@
    "execution_count": 2,
    "id": "found-offer",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dual"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is the structure that stores the autodiff information.  The name is\n",
     "# `Infinitesimal` spelled backward.  The elements are `x`, the result of a\n",
@@ -43,8 +32,8 @@
     "    parent::Union{Dual{T}, Array{Dual{T},1}, Int, Nothing}\n",
     "    bp!\n",
     "end\n",
-    "Dual(n::Integer, d::Float64, parent::Union{Dual{T}, Array{Dual{T},1}, Int, Nothing}, bp!::Any)  where {T <: Number} = Dual(promote(n, d)..., parent, bp!)\n",
-    "Dual(n::Float64, d::Integer, parent::Union{Dual{T}, Array{Dual{T},1}, Int, Nothing}, bp!::Any)  where {T <: Number} = Dual(promote(n, d)..., parent, bp!)\n"
+    "# Dual(n::Integer, d::Float64, parent::Union{Dual{T}, Array{Dual{T},1}, Int, Nothing}, bp!::Any)  where {T <: Number} = Dual(promote(n, d)..., parent, bp!)\n",
+    "# Dual(n::Float64, d::Integer, parent::Union{Dual{T}, Array{Dual{T},1}, Int, Nothing}, bp!::Any)  where {T <: Number} = Dual(promote(n, d)..., parent, bp!)\n"
    ]
   },
   {
@@ -80,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "convert (generic function with 187 methods)"
+       "convert (generic function with 186 methods)"
       ]
      },
      "execution_count": 4,
@@ -93,9 +82,9 @@
     "    Dual(x, zero(T), nothing, (dfdy, parents) -> nothing)\n",
     "end\n",
     "\n",
-    "function convert(::Type{Dual{T}}, x::Dual{S}) where {T, S <: Number}\n",
-    "    Dual(T(x.x), T(x.dfdy), x.parent, x.bp!)\n",
-    "end\n",
+    "# function convert(::Type{Dual{T}}, x::Dual{S}) where {T, S <: Number}\n",
+    "#     Dual(T(x.x), T(x.dfdy), x.parent, x.bp!)\n",
+    "# end\n",
     "\n",
     "\n",
     "function convert(::Type{Dual{T}}, x::S) where {T, S <: Number}\n",
@@ -393,7 +382,7 @@
     {
      "data": {
       "text/plain": [
-       "log (generic function with 21 methods)"
+       "max (generic function with 13 methods)"
       ]
      },
      "execution_count": 12,
@@ -501,7 +490,7 @@
     "    value = a.x^x.x\n",
     "    function bp!(dfdy, xy)\n",
     "        a,x = xy\n",
-    "         print(typeof(dfdy * (x.x) * (a.x)^(x.x - 1)), \" nic  \", typeof(dfdy * a.x^x.x*log(a.x)))\n",
+    "#          print(typeof(dfdy * (x.x) * (a.x)^(x.x - 1)), \" nic  \", typeof(dfdy * a.x^x.x*log(a.x)))\n",
     "        a.dfdy += dfdy * (x.x) * (a.x)^(x.x - 1)\n",
     "        x.dfdy += dfdy * a.x^x.x*log(a.x)\n",
     "    end\n",
@@ -513,24 +502,33 @@
     "    function bp!(dfdy, p)\n",
     "        p.dfdy += dfdy/x.x\n",
     "    end\n",
-    "\n",
     "    Dual(log(x.x), zero(T), x, bp!)\n",
-    "end"
+    "end\n",
+    "\n",
+    "function max(a, x::Dual{T}) where T\n",
+    "    function bp!(dfdy,p)\n",
+    "        p.dfdy += x.x < a ? a : 1 * dfdy\n",
+    "    end\n",
+    "    Dual(max(0, x.x), zero(T), x, bp!)\n",
+    "    \n",
+    "\n",
+    "end\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "fitting-drawing",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "test (generic function with 1 method)"
+       "test (generic function with 2 methods)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "encouraging-termination",
    "metadata": {},
    "outputs": [
@@ -553,7 +551,7 @@
        "(::var\"#dfdx#12\"{typeof(test)}) (generic function with 3 methods)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "available-willow",
    "metadata": {},
    "outputs": [
@@ -572,37 +570,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dual{Int64}[Dual{Int64}(4, 1, Dual{Int64}[Dual{Int64}(2, 0, 1, var\"#11#17\"()), Dual{Int64}(2, 0, 2, var\"#11#17\"())], var\"#bp!#25\"(Core.Box(Dual{Int64}(2, 0, 1, var\"#11#17\"())), Core.Box(Dual{Int64}(2, 0, 2, var\"#11#17\"()))))]Int64 nic  Float64"
+      "Dual{Float64}[Dual{Float64}(2.0, 1.0, Dual{Float64}[Dual{Float64}(2.0, 0.0, 1, var\"#11#17\"()), Dual{Float64}(1.0, 0.0, 2, var\"#11#17\"())], var\"#bp!#25\"(Core.Box(Dual{Float64}(2.0, 0.0, 1, var\"#11#17\"())), Core.Box(Dual{Float64}(1.0, 0.0, 2, var\"#11#17\"()))))]"
      ]
     },
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mInexactError: Int64(2.772588722239781)\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mInexactError: Int64(2.772588722239781)\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] Int64 at ./float.jl:710 [inlined]",
-      " [2] convert(::Type{Int64}, ::Float64) at ./number.jl:7",
-      " [3] setproperty!(::Dual{Int64}, ::Symbol, ::Float64) at ./Base.jl:34",
-      " [4] (::var\"#bp!#25\")(::Int64, ::Array{Dual{Int64},1}) at ./In[12]:102",
-      " [5] backprop!(::Array{Dual{Int64},1}) at ./In[8]:10",
-      " [6] backprop!(::Dual{Int64}) at ./In[8]:4",
-      " [7] (::var\"#dfdx#12\"{typeof(test)})(::Int64, ::Int64) at ./In[10]:54",
-      " [8] top-level scope at In[19]:1",
-      " [9] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
+     "data": {
+      "text/plain": [
+       "2-element Array{Float64,1}:\n",
+       " 1.0\n",
+       " 1.3862943611198906"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "d(2, 2)"
+    "d(2.0,1.0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "republican-boxing",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efficient-details",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "advanced-deposit",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "little-oklahoma",
    "metadata": {},
    "outputs": [],
    "source": []
