--- a/ADForward.ipynb
+++ b/ADForward.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "elegant-death",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "median-welding",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "limited-calculator",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "Dual"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "level-attachment",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "convert (generic function with 187 methods)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "dying-december",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "zero (generic function with 23 methods)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "wired-efficiency",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "promote_rule (generic function with 126 methods)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "focused-portable",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "extract_derivative (generic function with 3 methods)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "military-ecology",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "derivativeСalculation (generic function with 2 methods)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "emerging-motorcycle",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
        "^ (generic function with 67 methods)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "progressive-comment",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        "sqrt (generic function with 21 methods)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "id": "drawn-monte",
    "metadata": {},
    "outputs": [],
@@ -319,6 +319,7 @@
     "    return Dual(exp(x.x), exp(x.x)*x.dx)\n",
     "end\n",
     "function exp(xs::Array)\n",
+    "    print(xs)\n",
     "    return [exp(x) for x in xs]\n",
     "end\n",
     "function sin(x::Dual)\n",
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "eight-lounge",
    "metadata": {},
    "outputs": [
@@ -346,7 +347,7 @@
        "max (generic function with 13 methods)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "valued-problem",
    "metadata": {},
    "outputs": [
@@ -369,7 +370,7 @@
        "softmax (generic function with 1 method)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "digital-thinking",
    "metadata": {},
    "outputs": [
@@ -393,7 +394,7 @@
        "iterate (generic function with 212 methods)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "id": "golden-hamilton",
    "metadata": {},
    "outputs": [
@@ -419,7 +420,7 @@
        "jacobian (generic function with 1 method)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +439,6 @@
     "        end\n",
     "        temp  = [f(x)...]\n",
     "        column = extract_derivative.([f(x)...])\n",
-    "        print(column)\n",
     "        push!(jacobian_columns, column[:,:])\n",
     "    end\n",
     "    hcat(jacobian_columns...)\n",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "id": "accessory-sperm",
    "metadata": {
     "scrolled": true
@@ -457,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.19661193324148185, -0.19661193324148188][-0.19661193324148188, 0.19661193324148174]"
+      "Dual{Float64}[Dual{Float64}(1.0, 1.0), Dual{Float64}(2.0, 0.0)]Dual{Float64}[Dual{Float64}(1.0, 1.0), Dual{Float64}(2.0, 0.0)]Dual{Float64}[Dual{Float64}(1.0, 0.0), Dual{Float64}(2.0, 1.0)]Dual{Float64}[Dual{Float64}(1.0, 0.0), Dual{Float64}(2.0, 1.0)]"
      ]
     },
     {
@@ -468,45 +468,38 @@
        " -0.196612   0.196612"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "f(x::Vector) = softmax(x)\n",
-    "J(f, [1., 2.])"
+    "J(softmax, [1., 2.])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "id": "governmental-safety",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4.0, 0.0][2.0, 9.0][0.0, 6.0][0.0, 0.0][0.0, 0.0]"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "2×5 Array{Float64,2}:\n",
-       " 4.0  2.0  0.0  0.0  0.0\n",
-       " 0.0  9.0  6.0  0.0  0.0"
+       "2×3 Array{Float64,2}:\n",
+       " 4.0   2.0   0.0\n",
+       " 0.0  27.0  36.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f(x::Vector) = [2x[1]*x[2], 3x[2]*x[3]]\n",
-    "J(f, [1, 2., 3, 4, 5])"
+    "f(x::Vector) = [2x[1]*x[2], 3x[2]*x[3]^2]\n",
+    "J(f, [1, 2., 3])"
    ]
   },
   {
@@ -555,10 +548,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 54,
    "id": "catholic-judges",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -568,7 +568,7 @@
        " 0.6652409557748219"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
