--- a/BackwardDiff.ipynb
+++ b/BackwardDiff.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Base: exp, log, sin, cos, tan, +, ^, -, *, /, sqrt, convert, promote_rule, zero,max\n"
+    "import Base: iterate, exp, log, sin, cos, tan, +, ^, -, *, /, sqrt, convert, promote_rule, zero,max, isless\n"
    ]
   },
   {
@@ -210,7 +210,6 @@
     "    backprop!([l])\n",
     "end\n",
     "function backprop!(queue::Array{Dual{T},1}) where T\n",
-    "    print(queue)\n",
     "    while length(queue) > 0\n",
     "        l = popfirst!(queue)\n",
     "        l.bp!(l.dfdy, l.parent)\n",
@@ -298,6 +297,7 @@
     "    function dfdx(x::T) where T <: Number\n",
     "        # Pass the function a backward infinitesimal whose backprop function\n",
     "        # stores the backprop derivative in dfdx_store\n",
+    "        print(\"x::T\")\n",
     "\n",
     "        x = Dual(x, zero(x), 1, (dfdy, parents) -> nothing)\n",
     "\n",
@@ -311,13 +311,13 @@
     "        return y.dfdy\n",
     "    end\n",
     "\n",
-    "    function dfdx(x::Array{T}) where T <: Number\n",
+    "    function dfdx(x::Array{T}, i) where T <: Number\n",
+    "        print(\"array\")\n",
     "        fargs = [Dual(xelt, zero(xelt), i, (dfdy, parents) -> nothing) for (i, xelt) in enumerate(x)]\n",
-    "        result = f(fargs)\n",
+    "        result = f(fargs)[i]\n",
     "        result.dfdy = one(result.x)\n",
     "        backprop!(result)\n",
     "        y = collect_outputs(result)\n",
-    "\n",
     "        grad = zeros(typeof(result.x), length(x))\n",
     "        for yelt in y\n",
     "            grad[yelt.parent] = yelt.dfdy\n",
@@ -327,6 +327,8 @@
     "    end\n",
     "\n",
     "    function dfdx(x...)\n",
+    "        print(\"x...\")\n",
+    "\n",
     "        fargs = [Dual(xelt, zero(xelt), i, (dfdy, parents) -> nothing) for (i, xelt) in enumerate(x)]\n",
     "        result = f(fargs...)\n",
     "        result.dfdy = one(result.x)\n",
@@ -377,19 +379,10 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "religious-velvet",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "max (generic function with 13 methods)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "function bpp!(dfdy, xy)\n",
     "    x, y = xy\n",
@@ -446,6 +439,11 @@
     "    end\n",
     "\n",
     "    Dual(expx, zero(expx), x, bp!)\n",
+    "end\n",
+    "\n",
+    "function exp(xs::Array)\n",
+    "    print(xs)\n",
+    "    return [exp(x) for x in xs]\n",
     "end\n",
     "\n",
     "function sin(x::Dual{T}) where T\n",
@@ -513,35 +511,106 @@
     "    \n",
     "\n",
     "end\n",
-    "    "
+    "\n",
+    "\n",
+    "isless(x::Dual, y::Dual) = x.x < y.x;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
+   "id": "center-gazette",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "softmax (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function iterate(iter::Dual, state=1)\n",
+    "    if state > length(iter.x)\n",
+    "        return nothing\n",
+    "    end\n",
+    "    return (iter[state],state+1)\n",
+    "end\n",
+    "\n",
+    "function softmax(vector::Array)\n",
+    "    e = exp(vector)    \n",
+    "    return e / sum(e)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "green-integral",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "jacobian (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "J = function jacobian(f, number_of_functions, args::Vector{T}) where {T <:Number}\n",
+    "    jacobian_rows = Matrix{T}[]\n",
+    "    \n",
+    "    for i=1:number_of_functions\n",
+    "#         x = Dual{T}[]\n",
+    "#         for j=1:length(args)\n",
+    "#             seed = (i == j)\n",
+    "#             push!(x, seed ?\n",
+    "#                 Dual(args[j], one(args[j])) :\n",
+    "#                 Dual(args[j],zero(args[j])) )\n",
+    "#         end\n",
+    "#         temp  = [f(x)..]\n",
+    "        d = D(f)\n",
+    "        rows = d(args,i)\n",
+    "        push!(jacobian_rows, rows[:,:])\n",
+    "    end\n",
+    "    jacobian_rows\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "fitting-drawing",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "test (generic function with 2 methods)"
+       "test (generic function with 1 method)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function test(a, x)\n",
-    "    return a^x\n",
+    "    return a*x\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "encouraging-termination",
    "metadata": {},
    "outputs": [
@@ -551,7 +620,7 @@
        "(::var\"#dfdx#12\"{typeof(test)}) (generic function with 3 methods)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,62 +631,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "available-willow",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x..."
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Int64,1}:\n",
+       " 3\n",
+       " 2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d(2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "republican-boxing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "f (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# f(x::Vector) = [2x[1]*x[2], 3x[2]*x[3]^2]\n",
+    "f(x::Vector) = [x[1], 5*x[3], 4x[2]^2-2x[3], x[3]*sin(x[1])]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "agricultural-expression",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dual{Float64}[Dual{Float64}(2.0, 1.0, Dual{Float64}[Dual{Float64}(2.0, 0.0, 1, var\"#11#17\"()), Dual{Float64}(1.0, 0.0, 2, var\"#11#17\"())], var\"#bp!#25\"(Core.Box(Dual{Float64}(2.0, 0.0, 1, var\"#11#17\"())), Core.Box(Dual{Float64}(1.0, 0.0, 2, var\"#11#17\"()))))]"
+      "array2asdsadsdaInt642asdsadsdaInt642asdsadsdaInt64array2asdsadsdaInt642asdsadsdaInt642asdsadsdaInt64array2asdsadsdaInt642asdsadsdaInt642asdsadsdaInt64array2asdsadsdaInt642asdsadsdaInt642asdsadsdaInt64"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2-element Array{Float64,1}:\n",
-       " 1.0\n",
-       " 1.3862943611198906"
+       "4-element Array{Array{Float64,2},1}:\n",
+       " [1.0; 0.0; 0.0]\n",
+       " [0.0; 0.0; 5.0]\n",
+       " [0.0; 16.0; -2.0]\n",
+       " [1.6209069176044193; 0.0; 0.8414709848078965]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d(2.0,1.0)"
+    "J(f,4,[1.,2., 3.]) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "convenient-failing",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arrayDual{Float64}[Dual{Float64}(1.0, 0.0, 1, var\"#9#15\"()), Dual{Float64}(2.0, 0.0, 2, var\"#9#15\"())]arrayDual{Float64}[Dual{Float64}(1.0, 0.0, 1, var\"#9#15\"()), Dual{Float64}(2.0, 0.0, 2, var\"#9#15\"())]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Array{Float64,2},1}:\n",
+       " [0.46555335461147695; -0.19661193324148185]\n",
+       " [-0.19661193324148188; 0.9276705118714866]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "J(softmax,2,[1., 2.]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "twenty-wisconsin",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Dual{Float64},1}:\n",
+       " Dual{Float64}(2.0, 0.0, nothing, nothing)\n",
+       " Dual{Float64}(2.0, 0.0, nothing, nothing)\n",
+       " Dual{Float64}(2.0, 0.0, nothing, nothing)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [Dual(1.0, 0.0, nothing, nothing), Dual(2.0, 0.0, nothing, nothing), Dual(3.0, 0.0, nothing, nothing)]\n",
+    "y = [Dual(2.0, 0.0, nothing, nothing), Dual(2.0, 0.0, nothing, nothing), Dual(2.0, 0.0, nothing, nothing)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "asian-toolbox",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dual{Float64}[Dual{Float64}(1.0, 0.0, nothing, nothing), Dual{Float64}(2.0, 0.0, nothing, nothing), Dual{Float64}(3.0, 0.0, nothing, nothing)]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Dual{Float64},1}:\n",
+       "  Dual{Float64}(0.45304697140984085, 0.0, Dual{Float64}[Dual{Float64}(2.718281828459045, 0.0, Dual{Float64}(1.0, 0.0, nothing, nothing), var\"#bp!#38\"{Float64}(2.718281828459045)), Dual{Float64}(6.0, 0.0, Dual{Float64}[Dual{Float64}(3.0, 0.0, Dual{Float64}[Dual{Float64}(1.0, 0.0, nothing, nothing), Dual{Float64}(2.0, 0.0, nothing, nothing)], bpp!), Dual{Float64}(3.0, 0.0, nothing, nothing)], bpp!)], var\"#bp!#37\"{Float64}(0.16666666666666666))\n",
+       "      Dual{Float64}(1.231509349821775, 0.0, Dual{Float64}[Dual{Float64}(7.38905609893065, 0.0, Dual{Float64}(2.0, 0.0, nothing, nothing), var\"#bp!#38\"{Float64}(7.38905609893065)), Dual{Float64}(6.0, 0.0, Dual{Float64}[Dual{Float64}(3.0, 0.0, Dual{Float64}[Dual{Float64}(1.0, 0.0, nothing, nothing), Dual{Float64}(2.0, 0.0, nothing, nothing)], bpp!), Dual{Float64}(3.0, 0.0, nothing, nothing)], bpp!)], var\"#bp!#37\"{Float64}(0.16666666666666666))\n",
+       " Dual{Float64}(3.3475894871979444, 0.0, Dual{Float64}[Dual{Float64}(20.085536923187668, 0.0, Dual{Float64}(3.0, 0.0, nothing, nothing), var\"#bp!#38\"{Float64}(20.085536923187668)), Dual{Float64}(6.0, 0.0, Dual{Float64}[Dual{Float64}(3.0, 0.0, Dual{Float64}[Dual{Float64}(1.0, 0.0, nothing, nothing), Dual{Float64}(2.0, 0.0, nothing, nothing)], bpp!), Dual{Float64}(3.0, 0.0, nothing, nothing)], bpp!)], var\"#bp!#37\"{Float64}(0.16666666666666666))"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp(x)/sum(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "efficient-details",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(::var\"#dfdx#67\"{typeof(f)}) (generic function with 3 methods)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = D(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "advanced-deposit",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arrayDual{Int64}[Dual{Int64}(18, 1, Dual{Int64}[Dual{Int64}(6, 0, Dual{Int64}[Dual{Int64}(3, 0, nothing, var\"#1#2\"()), Dual{Int64}(2, 0, 2, var\"#64#70\"())], bpt!), Dual{Int64}(3, 0, 3, var\"#64#70\"())], bpt!)]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       " 0\n",
+       " 9\n",
+       " 6"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d([1,2,3],2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "little-oklahoma",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Float64,1}:\n",
+       " 0.09003057317038046\n",
+       " 0.24472847105479767\n",
+       " 0.6652409557748219"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "softmax([1,2,3])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "republican-boxing",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efficient-details",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "advanced-deposit",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "little-oklahoma",
+   "id": "considered-commodity",
    "metadata": {},
    "outputs": [],
    "source": []
